--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "body-parser": "^1.18.0",
     "express": "^4.15.4",
+    "google-map-react": "^0.26.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-places-autocomplete": "^5.4.3",
     "react-scripts": "1.0.13",
+    "shortid": "^2.2.8",
     "tachyons": "^4.8.1",
     "tachyons-cli": "^1.0.11"
   },
