--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.0",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "google-map-react": "^0.26.0",
+    "node-fetch": "^1.7.3",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -25,6 +27,7 @@
     "prestart": "npm run css",
     "prebuild": "npm run css"
   },
+  "proxy": "http://localhost:9000",
   "devDependencies": {
     "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
