--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "google-map-react": "^0.26.0",
+    "lodash": "^4.17.4",
     "node-fetch": "^1.7.3",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
@@ -33,6 +34,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "prettier-eslint": "^8.6.0"
   }
 }
