--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "tachyons-cli": "^1.0.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-client": "react-scripts start",
     "start-server": "nodemon ./server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -35,6 +35,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "nodemon": "^1.18.2",
     "prettier-eslint": "^8.6.0"
   }
 }
