--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start-client": "react-scripts start",
     "start-server": "nodemon ./server/app.js",
+    "prod:start-server": "node ./server/app.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
