--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.0",
+    "bulma": "^0.7.1",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "google-map-react": "^0.26.0",
@@ -25,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "scss:build": "node-sass src/scss/app.scss src/css/app.css --output-style compressed",
+    "scss:build": "node-sass-chokidar --include-path ./node_modules/ ./src/scss/app.scss -o ./src/css/ --importer=node_modules/node-sass-tilde-importer --output-style=compressed",
     "scss:watch": "npm run scss:build && npm run scss:build -- -wr",
     "prestart": "npm run scss:build",
     "prebuild": "npm run scss:build"
@@ -37,7 +38,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "node-sass": "^4.9.2",
+    "node-sass-chokidar": "^1.3.3",
+    "node-sass-tilde-importer": "^1.0.2",
     "nodemon": "^1.18.2",
     "prettier-eslint": "^8.6.0"
   }
