--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.18.0",
     "bulma": "^0.7.1",
+    "classnames": "^2.2.6",
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "google-map-react": "^0.26.0",
